main.css
body > * {
    margin: 10px;
    padding: 10px;
    background-color: #ffffff;
    font-family: 'Fira Sans', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
    color: #37393A;
}

h1 {
    font-size: 3em;
}
h2 {
    font-size: 2.25em;
}
h3 {
    font-size: 1.75em;
}
ul {
    list-style: none;
}
img {
    max-width: 100%;
    margin: 10px;
    padding: 10px;
    
}
.grid {
    display: grid;
    /* grid-template-columns: 1fr 2fr 1fr; */
    max-width: 95%;
    grid-template-areas: 
    "header"
    "main"
    "footer";
   
}

.header {
    margin: 10px;
    padding: 10px;
    max-width: 95%;
    border-bottom: #77B6EA solid 5px;
    display: grid;
    grid-template-areas: 
    "left"
    "middle"
    "right";
    
}
.main {
    /* border-bottom: #77B6EA solid 5px; */
    margin: 10px;
    padding: 10px;
    padding-bottom: 25px;
    max-width: 95%;
    display: grid;
    grid-template-areas:
    "area-1"
    "area-2"
    "area-3"
    "area-4"
   
    "area-5"
    "area-6"
    "area-7"
    "area-8";
}
.main > * {
    align-self: center;
}
@media screen and (min-width: 768px) {
    .grid {
        display: grid;
    }
    .header {
        background-position: center;
        background-repeat: no-repeat;
        background-size: cover;
        /* display: grid; */
        grid-template-columns: 1fr 3fr 1fr;
        grid-template-areas: "logo tagline features";
     
    }
    .main {
        display: grid;
        grid-template-columns: 2fr 2fr;
        grid-template-areas:
        "area-1 area-2" 
        "area-4 area-3"
        "area-5 area-6"
        "area-8 area-7";
    }

}

.logo {
    grid-area: left 1fr;
    align-self: center;
    
}
.tagline {
    grid-area: middle 3fr;
    align-self: center;

}

.features {
    grid-area: right 1fr;
    align-self: center;
}


/* @media screen and (min-width: 768px) {
    .main {
        grid-template-columns: 1fr 1fr;
        grid-template-areas:
        "img-1 feature-1"
        "feature-2 img-2"
        "img-3 feature-3"
        "feature-4 img-4";
    }
} */

.img-1 {
    grid-area: area-1;
}
.img-2 {
    grid-area: area-3;
}
.img-3 {
    grid-area: area-5;
}
.img-4 {
    grid-area: area-7;
}
.feature-1 {
    grid-area: area-2;
}
.feature-2 {
    grid-area: area-4;
}
.feature-3 {
    grid-area: area-6;
}
.feature-4 {
    grid-area: area-8;
}

.footer {
    max-width: 95%S;
    background-color: #E8EEF2;
    grid-template-areas: "cta-box";
}

.cta-box {
    margin: 10px;
    padding: 10px;
    grid-area: cta-box;

}

.footer-bar {
    margin: 10px;
    padding: 10px;
    grid-area: "footer-bar";
}

    

